--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,12 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
+  <script type="text/javascript" src="script.js"></script>  
+  <style type="text/css">
+  p{
+    color: red;
+  }
+</style>
 </head>
 
 
@@ -22,7 +27,7 @@
  </div>
   <div class="col-sm-9">
   <h1>CARS & BIKES</h1>
-  <p>Encyclopedia of Cars and Bikes.</p> 
+  <h3>Encyclopedia of Cars and Bikes.</h3> 
   </div>
 </div>
 </div>
@@ -35,20 +40,28 @@
     </div>
     <div class="col-sm-4">
           <div class="form-group">
-            <form>
+            <form name = "contact" action="http://demo6835492.mockable.io/sendEmail" onsubmit="validatecontact(); return false;"method="POST">
+
+
             <label for="usr">Name:</label>
-            <input type="text" placeholder= "Enter name" class="form-control" id="usr" minlength="3" maxlength="20" required><br>
+            <input type="text" placeholder= "Enter name" class="form-control" id="cuser" ><br>
+            <p id="vcuser" ></p>
 
             <label for="email">Email:</label>
-            <input type="email" placeholder= "Enter email" class="form-control" id="usr" required><br>
+            <input type="text" placeholder= "Enter email" class="form-control" id="cmail" ><br>
+            <p id="vcmail" ></p>
 
             <label for="phone">Phone:</label>
-            <input type="text" placeholder= "Enter contact no:" class="form-control" id="usr" pattern="[0-9]{10}" required><br>
+            <input type="text" placeholder= "Enter contact no:" class="form-control" id="phone" ><br>
+            <p id="vphone" ></p>
 
             <label for="question">Question:</label>
-            <textarea class="form-control" placeholder= "How can we help you?" rows="5" id="comment" minlength="1" maxlength="200"required></textarea><br>
+            <textarea class="form-control" placeholder= "How can we help you?" rows="5" id="comment" ></textarea><br>
+            <p id="vcomment" ></p>
 
             <button type="submit" class="btn btn-success btn-block">Send</button>
+
+
           </form>
           </div>  
     </div>
