--- a/login.html
+++ b/login.html
@@ -9,7 +9,13 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="script.js"></script>  
 
+  <style type="text/css">
+  p{
+    color: red;
+  }
+</style>
 </head>
 
 
@@ -22,7 +28,7 @@
  </div>
   <div class="col-sm-9">
   <h1>CARS & BIKES</h1>
-  <p>Encyclopedia of Cars and Bikes.</p> 
+  <h3>Encyclopedia of Cars and Bikes.</h3> 
   </div>
 </div>
 </div>
@@ -35,19 +41,24 @@
     </div>
     <div class="col-sm-4">
           <div class="form-group">
-            <form>
-            <label for="usr">Name:</label>
-            <input type="email" placeholder= "Enter name" class="form-control" id="usr" minlength="1" maxlength="20"required>
-            <br>
-            <label for="pwd">Password:</label>
-            <input type="password" placeholder= "Enter password"class="form-control" id="pwd" minlength="6" maxlength="15" required>
-          </div>  
+            <form name = "login" action="http://demo6835492.mockable.io/sendEmail" onsubmit="return validatelogin()" method="POST">
 
-          <button type="submit" class="btn btn-success btn-block">Login</button>
+
+            <label for="user">User ID:</label>
+            <input type="text" placeholder= "Enter User ID" class="form-control" id="user" >
+            <p id="userid" ></p><br>
+
+            
+            <label for="pwd">Password:</label>
+            <input type="password" placeholder= "Enter password" class="form-control" id="pwd">
+            <p id="pass" ></p><br>
+
+            <button type="submit" class="btn btn-success btn-block">Login</button>
+            </div>  
           </form>
           <br><br>
-          <a href="file:///home/user/Documents/javascript/signup.html"><p class="text-right">Not Registered? Sign Up</p></a>
-          <a href="file:///home/user/Documents/javascript/contact.html"><p class="text-right">Contact Us</p></a>
+          <a href="signup.html"><p style="color:#0576DA"; class="text-right">Not Registered? Sign Up</p></a>
+          <a href="contact.html"><p style="color:#0576DA"; class="text-right">Contact Us</p></a>
 
     </div>
     <div class="col-sm-4">
